--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,42 +22,356 @@ body input:required:valid,
 body textarea:required:valid {
   color: #666; }
 
-/*==========  Desktop First Method  ==========*/
+.why {
+  background-color: #f6e5ce;
+  padding-top: 35px;
+  background-image: url("../img/why-bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  padding-bottom: 50px; }
+
+.all-title {
+  text-align: center; }
+  .all-title h2 {
+    font-size: 36px;
+    font-family: Museosanscyrl500;
+    color: #4c2425;
+    line-height: 36px; }
+  .all-title b {
+    font-family: Museo-Sans-Cyrl-900; }
+
+.right-why {
+  text-align: right; }
+  .right-why .right-items {
+    margin-top: 40px;
+    max-width: 685px;
+    display: inline-block; }
+    .right-why .right-items li {
+      float: left;
+      text-align: center;
+      max-width: 295px;
+      margin: 32px 15px; }
+      .right-why .right-items li:nth-child(2n) {
+        margin-right: 0; }
+      .right-why .right-items li .img-why-item {
+        height: 72px; }
+      .right-why .right-items li h3 {
+        margin-top: 13px;
+        color: #000222;
+        font-size: 18px;
+        font-family: Museo-Sans-Cyrl-900; }
+      .right-why .right-items li p {
+        font-size: 18px;
+        font-family: Museosanscyrl500;
+        line-height: 25px; }
+
+.catalog {
+  padding-top: 73px;
+  background-color: #fdfdfd; }
+
+.all-brends {
+  margin-top: 56px;
+  padding: 0 40px; }
+
+.all-first-item {
+  max-width: 232px;
+  width: 100%;
+  float: left;
+  margin-top: 14.5px; }
+  .all-first-item a {
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    font-family: Museosanscyrl500;
+    color: #555555;
+    text-align: center;
+    border: 1px solid #e13151;
+    height: 172px;
+    text-transform: uppercase;
+    padding-top: 79px;
+    line-height: 18px; }
+    .all-first-item a:hover {
+      background-color: #e13151;
+      text-decoration: none;
+      color: #fff; }
+
+.next-brends ul li {
+  float: left;
+  width: 200px;
+  border: 1px solid #e7e7e7;
+  text-align: center;
+  height: 70px;
+  padding-top: 7px;
+  margin: 14.5px 11.5px;
+  position: relative; }
+  .next-brends ul li:nth-child(4n) {
+    margin-right: 0; }
+  .next-brends ul li:hover {
+    border: 1px solid #e13151; }
+
+.buy-items-slide {
+  padding: 0 40px; }
+
+.all-items-for ul li {
+  max-width: 332px;
+  float: left;
+  border: 1px solid #e7e7e7;
+  padding: 20px 15px;
+  margin: 23.5px 31px;
+  position: relative; }
+  .all-items-for ul li:hover {
+    -webkit-box-shadow: 0 0 25px rgba(192, 185, 175, 0.9);
+    box-shadow: 0 0 25px rgba(192, 185, 175, 0.9);
+    border: 1px solid #c0b9af; }
+    .all-items-for ul li:hover .lupe {
+      width: 135px;
+      height: 35px;
+      background-color: #e13151;
+      color: #fff;
+      left: auto;
+      border: none;
+      right: 0;
+      background-image: url("../img/lupe-h.png");
+      background-position: 16px center; }
+      .all-items-for ul li:hover .lupe a {
+        color: #fff;
+        padding-left: 20.5px;
+        font-size: 11.52px;
+        padding-top: 5.5px; }
+      .all-items-for ul li:hover .lupe p {
+        position: absolute;
+        right: 18px;
+        top: 3px;
+        display: block;
+        text-align: center;
+        line-height: 15px; }
+  .all-items-for ul li:nth-child(3n) {
+    margin-right: 0; }
+  .all-items-for ul li:nth-child(3n+1) {
+    margin-left: 0; }
+  .all-items-for ul li .img-product {
+    text-align: center;
+    height: 190px; }
+    .all-items-for ul li .img-product img {
+      width: 100%; }
+  .all-items-for ul li h2 {
+    text-align: center;
+    font-size: 20px;
+    line-height: 20px;
+    color: #000222;
+    font-family: Museo-Sans-Cyrl-900;
+    text-decoration: underline; }
+
+.options {
+  margin-top: 20px; }
+  .options p {
+    font-size: 18px;
+    line-height: 22px;
+    font-family: Museosanscyrl500; }
+  .options .left-opt {
+    width: 110px;
+    float: left; }
+    .options .left-opt p {
+      color: #000222; }
+  .options .right-opt p {
+    color: #555555; }
+
+.availability {
+  margin-top: 25px; }
+  .availability p {
+    padding-left: 24px;
+    font-size: 18px;
+    font-family: Museosanscyrl500;
+    position: relative; }
+    .availability p:after {
+      position: absolute;
+      left: 0;
+      top: 9px;
+      content: '';
+      background-image: url("../img/avy.png");
+      width: 16px;
+      height: 11px; }
+
+.price {
+  text-align: center; }
+  .price * {
+    display: inline-block;
+    font-size: 20px;
+    margin: 25px 10px; }
+  .price b {
+    font-family: Museo-Sans-Cyrl-900;
+    color: #000222; }
+  .price p {
+    font-family: Museosanscyrl500;
+    color: #555555;
+    text-decoration: line-through; }
+
+.buy {
+  border: 1px solid #e13151;
+  color: #e13151;
+  width: 200px;
+  margin: 0 auto;
+  height: 52px;
+  font-size: 20px;
+  line-height: 20px;
+  padding-top: 15px;
+  text-align: center;
+  display: block;
+  font-family: Museosanscyrl500; }
+  .buy:hover {
+    background-color: #e13151;
+    color: #fff;
+    text-decoration: none; }
+
+.lupe {
+  width: 46px;
+  height: 34px;
+  -webkit-transition: 1s all;
+  transition: 1s all;
+  border-right: 1px solid #e8e8e8;
+  border-bottom: 2px solid #e8e8e8;
+  border-top: 2px solid #e8e8e8;
+  background-image: url("../img/lupe.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #fdfdfd; }
+  .lupe a {
+    display: block;
+    font-size: 18px;
+    color: #555555;
+    line-height: 18px;
+    padding: 2.5px 12px;
+    font-family: Museosanscyrl500;
+    position: relative; }
+    .lupe a:hover {
+      text-decoration: none; }
+  .lupe p {
+    display: none;
+    color: #fff;
+    font-size: 14px;
+    font-family: Museosanscyrl500; }
+
+.all-catalog-items {
+  margin-bottom: 70px;
+  margin-top: 25px; }
+  .all-catalog-items a {
+    margin: 0px auto;
+    display: block;
+    border: 1px solid #e13151;
+    color: #e13151;
+    font-size: 22px;
+    max-width: 322px;
+    padding: 7.5px 0;
+    text-align: center;
+    text-decoration: underline;
+    font-family: Museosanscyrl500; }
+    .all-catalog-items a:hover {
+      background-color: #e13151;
+      color: #fff;
+      text-decoration: none; }
+
+.working-title {
+  min-height: 253px;
+  background-image: url("../img/uzor-bg.jpg");
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  padding-top: 110px; }
+  .working-title h2 {
+    font-size: 36px;
+    line-height: 36px;
+    color: #f6e5ce;
+    text-transform: uppercase;
+    font-family: Museo-Sans-Cyrl-900; }
+
+.working-offers {
+  background-image: url("../img/uzor-bg2.jpg");
+  background-position: center;
+  background-size: cover;
+  padding-bottom: 60px; }
+  .working-offers ul {
+    margin-top: 60px;
+    text-align: center; }
+    .working-offers ul li {
+      display: inline-block;
+      background-color: #f6e5ce;
+      vertical-align: top;
+      border: 2px solid #f6e5ce;
+      max-width: 258px;
+      width: 100%;
+      margin: 0 17.5px;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      min-height: 280px;
+      position: relative; }
+      .working-offers ul li:last-child:after {
+        display: none; }
+      .working-offers ul li:after {
+        position: absolute;
+        right: -35px;
+        top: 50%;
+        content: '';
+        background-image: url("../img/arrow-w.png");
+        width: 28px;
+        height: 28px; }
+    .working-offers ul .img-w {
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      background-image: url("../img/bg-img-w.jpg");
+      background-size: cover;
+      height: 102px; }
+      .working-offers ul .img-w img {
+        margin-top: 39px; }
+    .working-offers ul p {
+      font-size: 18px;
+      font-family: Museosanscyrl500;
+      color: #555555;
+      line-height: 30px;
+      padding: 23px 20px 0 20px; }
+
 /* Large Devices, Wide Screens */
+@media only screen and (max-width: 1400px) {
+  .brends {
+    margin-top: 100px; } }
+
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
   .wrapper {
-    width: auto; } }
+    width: auto; }
+  .pad {
+    padding: 50px 5px !important; }
+  footer {
+    text-align: center; }
+    footer .wrapper {
+      width: auto; }
+    footer ul {
+      float: none;
+      display: inline-block;
+      text-align: center; }
+      footer ul li {
+        margin-bottom: 10px;
+        margin-right: 0;
+        float: none; }
+    footer .gs {
+      float: none;
+      display: block; } }
 
 /* Small Devices, Tablets */
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
   .pad {
-    padding: 20px 5px !important; }
-  /*Disable Animation on Mobile Devices*/
-  .animated {
-    /*CSS transitions*/
-    -webkit-transition-property: none !important;
-    transition-property: none !important;
-    /*CSS transforms*/
-    -ms-transform: none !important;
-    -webkit-transform: none !important;
-    transform: none !important;
-    /*CSS animations*/
-    -webkit-animation: none !important;
-    animation: none !important; } }
+    padding: 20px 5px !important; } }
 
-/* Custom, iPhone Retina */
-/*==========  Mobile First Method  ==========*/
-/* Custom, iPhone Retina */
-/* Extra Small Devices, Phones */
-/* Small Devices, Tablets */
-/* Medium Devices, Desktops */
-/* Large Devices, Wide Screens */
 /* ============================ form css =========================== */
-#modal_callback_ok h3 {
+#modal_callback_ok h3, #modal_callback_ok h4 {
   font: 30px RobotoRegular,Arial,sans-serif;
   text-align: center; }
+
+#modal_callback_ok h4 {
+  font-weight: 700; }
 
 .allert, .allert_tell {
   position: absolute;
