--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,43 +33,387 @@ body textarea:required:valid{
 
 //Custom Styles Here
 
-footer{
-    background-color: #000000;
-    width: 100%;
-    overflow: hidden;
-    padding-top: 11px;
-    padding-bottom: 2px;
-    ul{
-        margin-top: 19px;
-        float: left;
-        padding-left: 0;
-        padding-right: 0;
+.why{
+    background-color: #f6e5ce;
+    padding-top: 35px;
+    background-image: url("../img/why-bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    padding-bottom: 50px;
+}
+
+.all-title{
+    text-align: center;
+    h2{
+        font-size:36px;
+        font-family:Museosanscyrl500;
+        color: #4c2425;
+        line-height: 36px;
+    }
+    b{
+        font-family:Museo-Sans-Cyrl-900;
+    }
+}
+
+.right-why{
+    text-align: right;
+    .right-items{
+        margin-top: 40px;
+        max-width: 685px;
+        display: inline-block;
         li{
             float: left;
-            margin-right: 20px;
-            a{
-                text-decoration: none;
-                color: #616161;
-                font-size: 16px;
+            text-align: center;
+            max-width: 295px;
+            margin: 32px 15px;
+            &:nth-child(2n){
+                margin-right: 0;
             }
-            a:hover{
-                text-decoration: none;
-                color: #fff;
+           .img-why-item{
+               height: 72px;
+           }
+            h3{
+                margin-top: 13px;
+                color: #000222;
+                font-size: 18px;
+                font-family:Museo-Sans-Cyrl-900;
+            }
+            p{
+                font-size: 18px;
+                font-family:Museosanscyrl500;
+                line-height: 25px;
             }
         }
-    }
-    .gs{
-        float: right;
-        margin: 9px;
-        margin-right: 15px;
-        display: block;
-    }
-    .gs:visited, .gs:active{
-        text-decoration:none;
     }
 }
 
 
+.catalog{
+    padding-top: 73px;
+    background-color: #fdfdfd;
+}
+
+.all-brends{
+    margin-top: 56px;
+    padding: 0 40px;
+}
+
+.all-first-item{
+    max-width: 232px;
+    width: 100%;
+    float: left;
+    margin-top: 14.5px;
+    a{
+        display: block;
+        width: 100%;
+        font-size:18px;
+        font-family:Museosanscyrl500;
+        color: #555555;
+        text-align: center;
+        border: 1px solid #e13151;
+        height: 172px;
+        text-transform: uppercase;
+        padding-top: 79px;
+        line-height: 18px;
+        &:hover{
+            background-color: #e13151;
+            text-decoration: none;
+            color: #fff;
+        }
+    }
+
+}
+
+.next-brends{
+    ul{
+        li{
+            float: left;
+            width: 200px;
+            border: 1px solid #e7e7e7;
+            text-align: center;
+            height: 70px;
+            padding-top: 7px;
+            margin: 14.5px 11.5px;
+            position: relative;
+            &:nth-child(4n){
+                margin-right: 0;
+            }
+            &:hover{
+                border: 1px solid #e13151;
+            }
+        }
+    }
+}
+
+
+.buy-items-slide{
+    padding: 0 40px;
+}
+
+.all-items-for{
+    ul{
+        li{
+            max-width: 332px;
+            float: left;
+            border: 1px solid #e7e7e7;
+            padding: 20px 15px;
+            margin: 23.5px 31px;
+            position: relative;
+            &:hover{
+                box-shadow: 0 0 25px rgba(192,185,175, 0.9);
+                border: 1px solid #c0b9af;
+                .lupe{
+                    width: 135px;
+                    height: 35px;
+                    background-color: #e13151;
+                    color: #fff;
+                    left: auto;
+                    border: none;
+                    right: 0;
+                    background-image: url("../img/lupe-h.png");
+                    background-position: 16px center;
+                    a{
+                        color: #fff;
+                        padding-left: 20.5px;
+                        font-size: 11.52px;
+                        padding-top: 5.5px;
+                    }
+                    p{
+                        position: absolute;
+                        right: 18px;
+                        top: 3px;
+                        display: block;
+                        text-align: center;
+                        line-height: 15px;
+                    }
+                }
+            }
+            &:nth-child(3n){
+                margin-right: 0;
+            }
+            &:nth-child(3n+1){
+                margin-left: 0;
+            }
+            .img-product{
+                text-align: center;
+                height: 190px;
+                img{
+                    width: 100%;
+                }
+            }
+            h2{
+                text-align: center;
+                font-size: 20px;
+                line-height: 20px;
+                color: #000222;
+                font-family:Museo-Sans-Cyrl-900;
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.options{
+    margin-top: 20px;
+    p{
+        font-size: 18px;
+        line-height: 22px;
+        font-family:Museosanscyrl500;
+    }
+    .left-opt{
+        width: 110px;
+        float: left;
+        p{
+            color: #000222;
+        }
+    }
+    .right-opt{
+        p{
+            color: #555555;
+        }
+    }
+}
+.availability{
+    margin-top: 25px;
+    p{
+        padding-left: 24px;
+        font-size: 18px;
+        font-family:Museosanscyrl500;
+        position: relative;
+        &:after{
+            position: absolute;
+            left: 0;
+            top:9px;
+            content: '';
+            background-image: url("../img/avy.png");
+            width: 16px;
+            height: 11px;
+        }
+    }
+}
+
+.price{
+    text-align: center;
+    *{
+        display: inline-block;
+        font-size:20px;
+        margin: 25px 10px;
+    }
+    b{
+        font-family:Museo-Sans-Cyrl-900;
+        color: #000222;
+    }
+    p{
+        font-family:Museosanscyrl500;
+        color: #555555;
+        text-decoration: line-through;
+    }
+}
+.buy{
+    border: 1px solid #e13151;
+    color: #e13151;
+    width: 200px;
+    margin: 0 auto;
+    height: 52px;
+    font-size:20px;
+    line-height: 20px;
+    padding-top: 15px;
+    text-align: center;
+    display: block;
+    font-family:Museosanscyrl500;
+    &:hover{
+        background-color: #e13151;
+        color: #fff;
+        text-decoration: none;
+    }
+}
+
+.lupe{
+    width: 46px;
+    height: 34px;
+    transition: 1s all;
+    border-right: 1px solid #e8e8e8;
+    border-bottom: 2px solid #e8e8e8;
+    border-top: 2px solid #e8e8e8;
+    background-image: url("../img/lupe.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #fdfdfd;
+    a{
+        display: block;
+        font-size: 18px;
+        color: #555555;
+        line-height: 18px;
+        padding: 2.5px 12px;
+        font-family:Museosanscyrl500;
+        position: relative;
+        &:hover{
+            text-decoration: none;
+        }
+    }
+    p{
+        display: none;
+        color: #fff;
+        font-size:14px;
+        font-family:Museosanscyrl500;
+    }
+}
+
+
+
+.all-catalog-items{
+  margin-bottom: 70px;
+  margin-top: 25px;
+  a{
+    margin: 0px auto;
+    display: block;
+    border: 1px solid #e13151;
+    color: #e13151;
+    font-size:22px;
+    max-width: 322px;
+    padding: 7.5px 0;
+    text-align: center;
+    text-decoration: underline;
+    font-family:Museosanscyrl500;
+    &:hover{
+      background-color: #e13151;
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+}
+
+.working-title{
+  min-height: 253px;
+  background-image: url("../img/uzor-bg.jpg");
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  padding-top: 110px;
+  h2{
+    font-size:36px;
+    line-height: 36px;
+    color: #f6e5ce;
+    text-transform: uppercase;
+    font-family:Museo-Sans-Cyrl-900;
+  }
+}
+
+.working-offers{
+  background-image: url("../img/uzor-bg2.jpg");
+  background-position: center;
+  background-size: cover;
+  padding-bottom: 60px;
+  ul{
+    margin-top: 60px;
+    text-align: center;
+    li{
+      display: inline-block;
+      background-color: #f6e5ce;
+      vertical-align: top;
+      border: 2px solid #f6e5ce;
+      max-width: 258px;
+      width: 100%;
+      margin: 0 17.5px;
+      border-radius: 5px;
+      min-height: 280px;
+      position: relative;
+      &:last-child{
+        &:after{
+          display: none;
+        }
+      }
+      &:after{
+        position: absolute;
+        right: -35px;
+        top: 50%;
+        content: '';
+        background-image: url("../img/arrow-w.png");
+        width: 28px;
+        height: 28px;
+      }
+    }
+    .img-w{
+      border-radius: 5px;
+      background-image: url("../img/bg-img-w.jpg");
+      background-size: cover;
+      height: 102px;
+      img{
+        margin-top: 39px;
+      }
+    }
+    p{
+      font-size: 18px;
+      font-family:Museosanscyrl500;
+      color: #555555;
+      line-height: 30px;
+      padding: 23px 20px 0 20px;
+    }
+  }
+}
 //ALWAYS END
 @import "media.scss";
 @import "sketches.scss";
