--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,6 +1,7 @@
 @import "bourbon";
 @import "vars.scss";
 @import "../libs/lightslider/dist/css/lightslider.min.css";
+@import "../libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css";
 
 body{
 	font-size: 16px;
