--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,4 +1,5 @@
 @import url(../libs/lightslider/dist/css/lightslider.min.css);
+@import url(../libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css);
 body {
   font-size: 16px;
   min-width: 320px;
